// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`running "projen" with no arguments will execute .projenrc.js 1`] = `
Object {
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
",
  ".projenrc.js": "new (require('projen').Project)({ name: 'foo' }).synth()",
}
`;

exports[`the "--rc" option can be used to specify projenrc location 1`] = `
Object {
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
",
}
`;
